Closed Bug 593438 Opened 14 years ago Closed 14 years ago

d3d9 layers break transparent windows

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file)

      No description provided.
So, we should check the windows transparency mode in GetLayerManager, and if the transparency mode is set to transparent we should always return a BasicLayerManager.
Assignee: nobody → jmuizelaar
http://hg.mozilla.org/mozilla-central/rev/aefc9fe57f22
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: