Bug 593438. d3d9: Don't use an accelerated layer manager for transparent windows. r=vlad

Transparent windows require a more complicated dance to get transparency to work
correctly. For now, we'll just not accelerate them.